# offset_ptr

./: .clang-format  CMakeLists.txt  LICENSE  README.md  decodeless_offset_ptr-config.cmake
.github/workflows/: build_and_test.yml
debugging/: offset_ptr_pretty_printer.py  offset_span.natvis  offset_span_pretty_printer.py  pretty_printer_embed.cmake  pretty_printer_embed.cpp
include/decodeless/: offset_ptr.hpp  offset_ptr.natvis  offset_span.hpp
include/nodecode/: offset_ptr.hpp  offset_ptr.natvis  offset_span.hpp  offset_span.natvis
test/: CMakeLists.txt
test/src/: test_offset_ptr.cpp  test_offset_span.cpp
